--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "json-server": "^1.0.0-alpha.21"
+    "json-server": "^0.17.0"
   }
 }
