--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "mock-api-template",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "mock server app",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "pratham",
   "license": "ISC",
   "dependencies": {
     "json-server": "^0.17.0"
